Swagger : Corrections
